--- a/package.json
+++ b/package.json
@@ -8,9 +8,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "axios": "^0.25.0",
+    "framer-motion": "^6.2.3",
     "next": "12.0.9",
+    "prop-types": "^15.8.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-icons": "^4.3.1",
+    "react-useanimations": "^2.0.8",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
