--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@/components/*": ["/components/*"],
       "@/styles/*": ["/styles/*"],
+      "@/typography": ["/styles/reusable/typography"],
       "@/public/*": ["/public/*"]
     }
   }
