--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "@/components/*": ["/components/*"],
       "@/styles/*": ["/styles/*"],
       "@/typography": ["/styles/reusable/typography"],
+      "@/utils/*": ["/utils/*"],
       "@/public/*": ["/public/*"]
     }
   }
