--- a/jsconfig.json
+++ b/jsconfig.json
@@ -3,6 +3,7 @@
     "baseUrl": ".",
     "paths": {
       "@/components/*": ["/components/*"],
+      "@/components-i/*": ["/components/isolated/*"],
       "@/styles/*": ["/styles/*"],
       "@/typography": ["/styles/reusable/typography"],
       "@/utils/*": ["/utils/*"],
