component header listo

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -50,7 +50,9 @@
         "map": [
           ["@/components", "./components"],
           ["@/components-i", "./components/isolated"],
+          ["@/components-r", "./components/reusable"],
           ["@/styles", "./styles"],
+          ["@/hooks", "./hooks"],
           ["@/typography", "./styles/reusable/typography"],
           ["@/utils", "./utils"],
           ["@/public", "./public"]
