--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,7 +4,9 @@
     "paths": {
       "@/components/*": ["/components/*"],
       "@/components-i/*": ["/components/isolated/*"],
+      "@/components-r/*": ["/components/reusable/*"],
       "@/styles/*": ["/styles/*"],
+      "@/hooks/*": ["/hooks/*"],
       "@/typography": ["/styles/reusable/typography"],
       "@/utils/*": ["/utils/*"],
       "@/public/*": ["/public/*"]
