--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
     "react-useanimations": "^2.0.8",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.9",
