--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.3.1",
+    "react-query": "^3.34.12",
     "react-useanimations": "^2.0.8",
-    "styled-components": "^5.3.3",
-    "uuid": "^8.3.2"
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.9",
