--- a/jsconfig.json
+++ b/jsconfig.json
@@ -7,6 +7,7 @@
       "@/components-r/*": ["/components/reusable/*"],
       "@/styles/*": ["/styles/*"],
       "@/hooks/*": ["/hooks/*"],
+      "@/context/*": ["/context/*"],
       "@/typography": ["/styles/reusable/typography"],
       "@/utils/*": ["/utils/*"],
       "@/public/*": ["/public/*"]
