--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,6 +5,7 @@
       "@/components/*": ["/components/*"],
       "@/components-i/*": ["/components/isolated/*"],
       "@/components-r/*": ["/components/reusable/*"],
+      "@/sections/*": ["/sections/*"],
       "@/styles/*": ["/styles/*"],
       "@/hooks/*": ["/hooks/*"],
       "@/context/*": ["/context/*"],
