--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-query": "^3.34.12",
     "react-scrollbar-size": "^4.0.0",
     "react-useanimations": "^2.0.8",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.0.9",
